--- a/index.html
+++ b/index.html
@@ -600,6 +600,7 @@ header, .context-menu, .megamenu-content, footer{
             <li><span>6. XXXのYYYに関する研究</span><div>(Sun May 13 1928 19:43:25 GMT+0900 (日本標準時))</div></li>
             <li><span>6. XXXのYYYに関する研究</span><div>(Sun May 13 1928 19:43:28 GMT+0900 (日本標準時))</div></li>
             <li><span>7. hogeをfugaにする研究</span><div>(Fri Oct 22 2021 19:59:26 GMT+0900 (日本標準時))</div></li>
+            <li><span>8. hogeをpiyoする研究</span><div>(Fri Oct 22 2021 19:59:26 GMT+0900 (日本標準時))</div></li>
         </ul>
     </div></div>
 </body>
